tests/inputs/invalid/map-02.js
const map = [
    ['@','-','-','A','-','@','-','+'],
    ['','','','','','','','|'],
    ['','B','-','+','','','','C'],
    ['','','','|','','','','|'],
    ['','','','+','-','-','-','+'],
];

module.exports = map;